[project]
name = "attention-couple-comfyui"
description = "Nodes:Attention couple. This is a custom node that manipulates region-specific prompts. While vanilla ComfyUI employs an area specification method based on latent couples, this node divides regions using attention layers within UNet."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/laksjdjf/attention-couple-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "attention-couple-ComfyUI"
Icon = ""
